--- a/SSAANIP/login.xaml
+++ b/SSAANIP/login.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SSAANIP"
         mc:Ignorable="d" d:DesignHeight="414" d:DesignWidth="865">
+    
     <Grid Width="865" Height="414" Background="White">
         <Button Content="Login" HorizontalAlignment="Left" Height="32" Margin="80,173,0,0" VerticalAlignment="Top" Width="139" Click="login"/>
         <Label HorizontalAlignment="Left" Height="28" Margin="80,51,0,0" VerticalAlignment="Top" Width="103" Content="Username"/>
@@ -12,6 +13,7 @@
         <TextBox HorizontalAlignment="Left" Height="23" Margin="80,79,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="139" Name="usrBox"/>
         <PasswordBox HorizontalAlignment="Left" Height="23" Margin="80,138,0,0" VerticalAlignment="Top" Width="139"  Name="pwdBox" />
         <Label Content="" HorizontalAlignment="Left" Height="57" Margin="80,254,0,0" VerticalAlignment="Top" Width="178" Name="output" Foreground="Red"/>
+        <Button Content="Change server" HorizontalAlignment="Left" Height="27" Margin="80,333,0,0" VerticalAlignment="Top" Width="139" Click="changeServer"/>
 
     </Grid>
 </Page>
