--- a/SSAANIP/MainWindow.xaml
+++ b/SSAANIP/MainWindow.xaml
@@ -7,7 +7,11 @@
         mc:Ignorable="d" Background="White">
 
     <Grid Width="865" Height="414">
-        <ListBox Name="lsArtist" HorizontalAlignment="Left" Height="119" Margin="55,88,0,0" VerticalAlignment="Top" Width="114" />
-        <ListBox x:Name="lsAlbums" HorizontalAlignment="Left" Height="119" Margin="184,88,0,0" VerticalAlignment="Top" Width="114"/>
+        <Button Content="Refresh data" HorizontalAlignment="Left" Height="27" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
+
+        <ListBox Name="lsArtist" HorizontalAlignment="Left" Height="119" Margin="55,88,0,0" VerticalAlignment="Top" Width="114" SelectionChanged="lsArtist_SelectionChanged" />
+        <ListBox x:Name="lsAlbums" HorizontalAlignment="Left" Height="119" Margin="184,88,0,0" VerticalAlignment="Top" Width="114" SelectionChanged="lsAlbums_SelectionChanged"/>
+        <ListBox Name="lsSongs" HorizontalAlignment="Left" Height="119" Margin="320,88,0,0" VerticalAlignment="Top" Width="230" />
+        <Button Content="Play selected album" Name="btnPlayAlbum" HorizontalAlignment="Left" Height="25" Margin="184,221,0,0" VerticalAlignment="Top" Width="114" Click="playAlbum"/>
     </Grid>
 </Page>
