--- a/SSAANIP/master.xaml
+++ b/SSAANIP/master.xaml
@@ -5,7 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SSAANIP"
         mc:Ignorable="d"
-        Title="master" Width="865" Height="414" ResizeMode="CanResize" Background="White" Foreground="Black">
-    
-    <Frame Name="Frame" NavigationUIVisibility="Hidden" ></Frame>
+        Title="master" Width="865" Height="414" ResizeMode="NoResize" Background="White" Foreground="Black" >
+
+    <Frame Name="Frame" NavigationUIVisibility="Hidden" >
+</Frame>
+
 </Window>
