--- a/SSAANIP/MainWindow.xaml
+++ b/SSAANIP/MainWindow.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SSAANIP"
-        mc:Ignorable="d" Background="White">
+        mc:Ignorable="d" Background="White" Width="865" Height="414">
 
     <Grid Width="865" Height="414">
         <Button Content="Refresh data" HorizontalAlignment="Left" Height="27" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
@@ -13,5 +13,13 @@
         <ListBox x:Name="lsAlbums" HorizontalAlignment="Left" Height="119" Margin="184,88,0,0" VerticalAlignment="Top" Width="114" SelectionChanged="lsAlbums_SelectionChanged"/>
         <ListBox Name="lsSongs" HorizontalAlignment="Left" Height="119" Margin="320,88,0,0" VerticalAlignment="Top" Width="230" />
         <Button Content="Play selected album" Name="btnPlayAlbum" HorizontalAlignment="Left" Height="25" Margin="184,221,0,0" VerticalAlignment="Top" Width="114" Click="playAlbum"/>
+        <MediaElement Name="mediaElement" HorizontalAlignment="Left" Height="72" Margin="670,332,0,0" VerticalAlignment="Top" Width="156" MediaEnded="mediaElement_MediaEnded"  />
+        <Border BorderBrush="Black" Background="LightSeaGreen" BorderThickness="1" HorizontalAlignment="Center" Height="68" Margin="0,346,0,0" VerticalAlignment="Top" Width="865"/>
+        <Button Name="btnPrevSong" Margin="38,348,805,34" Background="GreenYellow" BorderBrush="Transparent" Content="&#60;" Click="btnPrevSong_Click" />
+
+            <Button Name="btnNextSong" Margin="89,348,753,34" Background="GreenYellow" BorderBrush="Transparent" Content="&#62;" Click="btnNextSong_click"/>
+        
+    
+    
     </Grid>
 </Page>
