--- a/SSAANIP/MainWindow.xaml
+++ b/SSAANIP/MainWindow.xaml
@@ -9,19 +9,20 @@
     <Grid Width="865" Height="414">
         <Button Content="Refresh data" HorizontalAlignment="Left" Height="27" VerticalAlignment="Top" Width="75" Click="btnUpdateDb_clicked"/>
 
-        <ListBox Name="lsArtist" HorizontalAlignment="Left" Height="119" Margin="49,88,0,0" VerticalAlignment="Top" Width="125" SelectionChanged="lsArtist_SelectionChanged" />
-        <ListBox Name="lsAlbums" HorizontalAlignment="Left" Height="119" Margin="184,88,0,0" VerticalAlignment="Top" Width="125" SelectionChanged="lsAlbums_SelectionChanged"/>
-        <ListBox Name="lsSongs" HorizontalAlignment="Left" Height="119" Margin="319,88,0,0" VerticalAlignment="Top" Width="230" SelectionChanged="lsSongs_SelectionChanged" />
-        
-        <Button Content="Play selected album" Name="btnPlayAlbum" HorizontalAlignment="Left" Height="25" Margin="184,221,0,0" VerticalAlignment="Top" Width="125" Click="btnPlayAlbum_clicked" Visibility="Hidden"/>
-        <Button Content="Queue selected album" Name="btnQueueAlbum" HorizontalAlignment="Left" Height="25" Margin="184,251,0,0" VerticalAlignment="Top" Width="125" Click="btnQueueAlbum_Click" Visibility="Hidden"/>
-        <Button Content="Play selected song" Name="btnPlaySong" HorizontalAlignment="Left" Height="25" Margin="372,221,0,0" VerticalAlignment="Top" Width="124" Click="btnPlaySong_Click" Visibility="Hidden"/>
-        <Button Content="Queue selected song" Name="btnQueueSong" HorizontalAlignment="Left" Height="25" Margin="372,251,0,0" VerticalAlignment="Top" Width="124" Click="btnQueueSong_Click" Visibility="Hidden"/>
+        <ListBox Name="lsArtist"  HorizontalAlignment="Left" Height="119" Margin="19,88,0,0" VerticalAlignment="Top" Width="125" SelectionChanged="lsArtist_SelectionChanged" ScrollViewer.VerticalScrollBarVisibility="Auto" UseLayoutRounding="True" />
+        <ListBox Name="lsAlbums" HorizontalAlignment="Left" Height="119" Margin="154,88,0,0" VerticalAlignment="Top" Width="125" SelectionChanged="lsAlbums_SelectionChanged"/>
+        <ListBox Name="lsSongs" HorizontalAlignment="Left" Height="119" Margin="288,88,0,0" VerticalAlignment="Top" Width="230" SelectionChanged="lsSongs_SelectionChanged" />
 
-        <MediaElement Name="mediaElement" HorizontalAlignment="Left" Height="72" Margin="706,246,0,0" VerticalAlignment="Top" Width="156" MediaEnded="mediaElement_MediaEnded" UnloadedBehavior="Manual" LoadedBehavior="Manual"  />
+        <Button Content="Play selected album" Name="btnPlayAlbum" HorizontalAlignment="Left" Height="25" Margin="154,221,0,0" VerticalAlignment="Top" Width="125" Click="btnPlayAlbum_clicked" Visibility="Hidden"/>
+        <Button Content="Queue selected album" Name="btnQueueAlbum" HorizontalAlignment="Left" Height="25" Margin="154,251,0,0" VerticalAlignment="Top" Width="125" Click="btnQueueAlbum_Click" Visibility="Hidden"/>
+        <Button Content="Play selected song" Name="btnPlaySong" HorizontalAlignment="Left" Height="25" Margin="341,221,0,0" VerticalAlignment="Top" Width="124" Click="btnPlaySong_Click" Visibility="Hidden"/>
+        <Button Content="Queue selected song" Name="btnQueueSong" HorizontalAlignment="Left" Height="25" Margin="341,251,0,0" VerticalAlignment="Top" Width="124" Click="btnQueueSong_Click" Visibility="Hidden"/>
+
+        <MediaElement Name="mediaElement" HorizontalAlignment="Left" Height="72" Margin="0,0,0,0" VerticalAlignment="Top" Width="0" MediaEnded="mediaElement_MediaEnded" UnloadedBehavior="Manual" LoadedBehavior="Manual"  />
+
         <Border BorderBrush="Black" Background="LightSeaGreen" BorderThickness="1" HorizontalAlignment="Center" Height="67" Margin="0,320,0,0" VerticalAlignment="Top" Width="865"/>
         <Button Name="btnPrevSong" Margin="38,333,805,49" Background="GreenYellow" BorderBrush="Transparent" Content="&#60;" Click="btnPrevSong_Click" />
-        <Button Name="btnStop" Margin="117,333,726,49" Background="GreenYellow" BorderBrush="Transparent" Content="⏹" Click="btnStop_Click" />
+        <Button Name="btnStop" Margin="117,333,726,49" Background="GreenYellow" BorderBrush="Transparent" Content="⬛" Click="btnStop_Click" />
         <Button Name="btnNextSong" Margin="89,333,753,49" Background="GreenYellow" BorderBrush="Transparent" Content="&#62;" Click="btnNextSong_click"/>
         <Button Name="btnPlayPause" Margin="63,333,780,49" Background="GreenYellow" BorderBrush="Transparent" Content="⏵" Click="btnPlayPause_Click" />
         <Button Name="btnLoopToggle" Margin="821,333,22,49" Background="red" BorderBrush="Transparent" Content="🔁" Click="btnLoopToggle_Click" />
@@ -32,6 +33,20 @@
         <Slider Name="sdrVolume" HorizontalAlignment="Left" Height="21" Margin="0,361,0,0" VerticalAlignment="Top" Value="5" Width="168" ValueChanged="sdrVolume_ValueChanged"/>
         <Slider Name="sdrPosition" HorizontalAlignment="Left" Visibility="Visible" Height="24" TickFrequency="1" TickPlacement="None" IsSnapToTickEnabled="True" Margin="173,360,0,0" VerticalAlignment="Top" Width="603"  Maximum="100" ValueChanged="sdrPosition_ValueChanged"/>
         <Label x:Name="lblTime" Margin="696,321,89,63" Content=""/>
+
+        <ListBox Name="lsQueue" BorderThickness="0" HorizontalAlignment="Left" Height="316" Margin="714,0,0,0" VerticalAlignment="Top" Width="151" SelectionChanged="lsQueue_SelectionChanged" />
+        <Button Name="btnQueueUp" Content="^" Visibility="Hidden" HorizontalAlignment="Left" Height="17" Margin="693,38,0,0" VerticalAlignment="Top" Width="18" Click="btnQueueUp_Click"/>
+        <Button Name="btnQueueDown" Content="^" Visibility="Hidden" HorizontalAlignment="Left" Height="17" Margin="693,88,0,0" VerticalAlignment="Top" Width="18" RenderTransformOrigin="0.5,0.5" Click="btnQueueDown_Click">
+            <Button.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="180"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Button.RenderTransform>
+        </Button>
+        <Button Name="btnQueueDelete" Content="🗑️" Visibility="Hidden" HorizontalAlignment="Left" Height="23" Margin="693,59,0,0" VerticalAlignment="Top" Width="18" Click="btnQueueDelete_Click" />
 
 
 
