--- a/SSAANIP/userMgmt.xaml
+++ b/SSAANIP/userMgmt.xaml
@@ -11,11 +11,13 @@
     <Grid Width="865" Height="414">
         <Label Name="lblUserName" Content="Username: " HorizontalAlignment="Left" Height="25" Margin="32,41,0,0" VerticalAlignment="Top" Width="205"/>
         <Button Name="btnLogout" Content="Logout" HorizontalAlignment="Left" Height="28" Margin="32,74,0,0" VerticalAlignment="Top" Width="102" Click="btnLogout_Click"/>
-        <Button Name="btnDelete" Content="Delete account" HorizontalAlignment="Left" Background="Red" Foreground="White" Height="35" Margin="32,116,0,0" VerticalAlignment="Top" Width="102" Click="btnDelete_Click"/>
-        <Button Name="btnAdmin" Visibility="Hidden" Content="Admin panel" HorizontalAlignment="Left" Height="38" Margin="32,186,0,0" VerticalAlignment="Top" Width="102" Click="btnAdmin_Click"/>
+        <Button Name="btnDelete" Content="Delete account" HorizontalAlignment="Left" Background="Red" Foreground="White" Height="35" Margin="32,116,0,0" VerticalAlignment="Top" Width="102" Click="btnDeleteSelf_Click"/>
+        <Button Name="btnAdmin" Visibility="Hidden" Content="Admin panel" HorizontalAlignment="Left" Height="38" Margin="32,156,0,0" VerticalAlignment="Top" Width="102" Click="btnAdmin_Click"/>
         <Button Name="btnback" Content="Back" HorizontalAlignment="Left" Height="22" Margin="10,333,0,0" VerticalAlignment="Top" Width="73" Click="btnback_Click"/>
+        <PasswordBox Name="confirmPass" Visibility="Hidden" HorizontalAlignment="Left" Height="25" Margin="32,207,0,0" VerticalAlignment="Top" Width="102"/>
+        <TextBox BorderThickness="0" Name="lblConfirm" Text="" HorizontalAlignment="Left" Height="36" Margin="32,242,0,0" VerticalAlignment="Top" Width="102" TextWrapping="Wrap"/>
 
-        <Grid Name="adminPanel" >
+        <Grid Name="adminPanel" Visibility="Visible">
             <ListBox Name="lsUsers" BorderThickness="0" HorizontalAlignment="Left" Height="404" Margin="685,10,0,0" VerticalAlignment="Top" Width="180" />
             <Button Name="btnDeleteSelectedUser" Content="Delete user" Visibility="Visible"  HorizontalAlignment="Left" Height="25" Margin="613,36,0,0" VerticalAlignment="Top" Width="70" Click="btnDeleteSelectedUser_Click" />
             <Button Name="btnMakeAdmin" Content="Make admin" HorizontalAlignment="Left" Height="27" Margin="613,65,0,0" VerticalAlignment="Top" Width="70" RenderTransformOrigin="0.5,0.5" Click="btnMakeAdmin_Click" />
@@ -23,10 +25,13 @@
             <Label Content="Username:" HorizontalAlignment="Left" Height="25" Margin="272,41,0,0" VerticalAlignment="Top" Width="108" />
             <TextBox Name="txtUserName" HorizontalAlignment="Left" Height="21" Margin="272,74,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="108" />
             <Label Content="Password:" HorizontalAlignment="Left" Height="31" Margin="272,97,0,0" VerticalAlignment="Top" Width="108" />
-            <PasswordBox Name="pwdPassword" HorizontalAlignment="Left" Height="21" Margin="272,129,0,0" VerticalAlignment="Top" Width="108" />
-            <Label Content="Confirm Password" HorizontalAlignment="Left" Height="29" Margin="272,150,0,0" VerticalAlignment="Top" Width="108" />
-            <PasswordBox Name="pswConfirmPassword" HorizontalAlignment="Left" Height="21" Margin="272,183,0,0" VerticalAlignment="Top" Width="108" />
-            <Button Name="btnAddUser" Content="AddUser" HorizontalAlignment="Left" Height="27" Margin="287,212,0,0" VerticalAlignment="Top" Width="73" />
+            <PasswordBox Name="pwdPassword" HorizontalAlignment="Left" Height="21" Margin="272,124,0,0" VerticalAlignment="Top" Width="108" />
+            <Label Content="Confirm Password" HorizontalAlignment="Left" Height="29" Margin="272,146,0,0" VerticalAlignment="Top" Width="108" />
+            <PasswordBox Name="pwdConfirmPassword" HorizontalAlignment="Left" Height="21" Margin="272,175,0,0" VerticalAlignment="Top" Width="108" />
+            <Button Name="btnAddUser" Content="AddUser" HorizontalAlignment="Left" Height="27" Margin="287,226,0,0" VerticalAlignment="Top" Width="73" Click="btnAddUser_Click" />
+            <CheckBox Name="checkBoxAdmin" Content="CheckBox" HorizontalAlignment="Left" Height="14" Margin="360,207,0,0" VerticalAlignment="Top" Width="20"/>
+            <Label Content="Admin" HorizontalContentAlignment="Right" HorizontalAlignment="Left" Height="25" Margin="272,201,0,0" VerticalAlignment="Top" Width="83"/>
+            <Label Name="lblOutput" Content="" HorizontalAlignment="Left" Height="30" Margin="272,276,0,0" VerticalAlignment="Top" Width="108"/>
 
         </Grid>
 
