--- a/SSAANIP/MainWindow.xaml
+++ b/SSAANIP/MainWindow.xaml
@@ -33,10 +33,10 @@
         <Slider Name="sdrVolume" HorizontalAlignment="Left" Height="21" Margin="0,361,0,0" VerticalAlignment="Top" Value="5" Width="168" ValueChanged="sdrVolume_ValueChanged"/>
         <Slider Name="sdrPosition" HorizontalAlignment="Left" Visibility="Visible" Height="24" TickFrequency="1" TickPlacement="None" IsSnapToTickEnabled="True" Margin="173,360,0,0" VerticalAlignment="Top" Width="603"  Maximum="100" ValueChanged="sdrPosition_ValueChanged"/>
         <Label x:Name="lblTime" Margin="696,321,89,63" Content=""/>
-
+        <!--Queue managment-->
         <ListBox Name="lsQueue" BorderThickness="0" HorizontalAlignment="Left" Height="316" Margin="714,0,0,0" VerticalAlignment="Top" Width="151" SelectionChanged="lsQueue_SelectionChanged" />
-        <Button Name="btnQueueUp" Content="^" Visibility="Hidden" HorizontalAlignment="Left" Height="17" Margin="693,38,0,0" VerticalAlignment="Top" Width="18" Click="btnQueueUp_Click"/>
-        <Button Name="btnQueueDown" Content="^" Visibility="Hidden" HorizontalAlignment="Left" Height="17" Margin="693,88,0,0" VerticalAlignment="Top" Width="18" RenderTransformOrigin="0.5,0.5" Click="btnQueueDown_Click">
+        <Button Name="btnQueueUp" Content="^" Visibility="Hidden" HorizontalAlignment="Left" Height="20" Margin="693,38,0,0" VerticalAlignment="Top" Width="20" Click="btnQueueUp_Click"/>
+        <Button Name="btnQueueDown" Content="^" Visibility="Hidden" HorizontalAlignment="Left" Height="20" Margin="693,80,0,0" VerticalAlignment="Top" Width="20" RenderTransformOrigin="0.5,0.5" Click="btnQueueDown_Click">
             <Button.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -46,7 +46,11 @@
                 </TransformGroup>
             </Button.RenderTransform>
         </Button>
-        <Button Name="btnQueueDelete" Content="🗑️" Visibility="Hidden" HorizontalAlignment="Left" Height="23" Margin="693,59,0,0" VerticalAlignment="Top" Width="18" Click="btnQueueDelete_Click" />
+        <Button Name="btnQueueDelete" Content="🗑️" Visibility="Hidden" HorizontalAlignment="Left" Height="20" Margin="693,59,0,0" VerticalAlignment="Top" Width="20" Click="btnQueueDelete_Click" />
+        <Button Name="btnPlaySongFromQueue" Content="⏵" Visibility="Hidden" HorizontalAlignment="Left" Height="20" Margin="693,105,0,0" VerticalAlignment="Top" Width="20" Click="btnPlaySongFromQueue_Click"/>
+
+
+
         <Button Name="btnUserManage" Content="Manage user" HorizontalAlignment="Left" Height="27" Margin="75,0,0,0" VerticalAlignment="Top" Width="82" Click="btnUserManage_Click"/>
         <Label Content="Albums" HorizontalAlignment="Left" Height="27" Margin="154,55,0,0" VerticalAlignment="Top" Width="125" HorizontalContentAlignment="Center"/>
         <Label Content="Artists" HorizontalAlignment="Left" Height="27" Margin="19,55,0,0" VerticalAlignment="Top" Width="125" HorizontalContentAlignment="Center"/>
