--- a/SSAANIP/userMgmt.xaml
+++ b/SSAANIP/userMgmt.xaml
@@ -9,15 +9,19 @@
       Background="White">
 
     <Grid Width="865" Height="414">
-        <Label Name="lblUserName" Content="Username: " HorizontalAlignment="Left" Height="25" Margin="32,41,0,0" VerticalAlignment="Top" Width="205"/>
+        <Label Name="lblUserName" Content="Username: " HorizontalAlignment="Left" Height="25" Margin="32,41,0,0" VerticalAlignment="Top" Width="102"/>
         <Button Name="btnLogout" Content="Logout" HorizontalAlignment="Left" Height="28" Margin="32,74,0,0" VerticalAlignment="Top" Width="102" Click="btnLogout_Click"/>
         <Button Name="btnDeleteSelf" Content="Delete account" HorizontalAlignment="Left" Background="Red" Foreground="White" Height="35" Margin="32,116,0,0" VerticalAlignment="Top" Width="102" Click="btnDeleteSelf_Click"/>
         <Button Name="btnAdmin" Visibility="Hidden" Content="Admin panel" HorizontalAlignment="Left" Height="38" Margin="32,156,0,0" VerticalAlignment="Top" Width="102" Click="btnAdmin_Click"/>
         <Button Name="btnback" Content="Back" HorizontalAlignment="Left" Height="22" Margin="10,340,0,0" VerticalAlignment="Top" Width="73" Click="btnback_Click"/>
         <PasswordBox Name="confirmPass" Visibility="Hidden" VerticalContentAlignment="Center" HorizontalAlignment="Left" Height="25" Margin="32,207,0,0" VerticalAlignment="Top" Width="102"/>
-        <TextBox BorderThickness="0" Name="lblConfirm" Text="" HorizontalAlignment="Left" Height="36" Margin="32,242,0,0" VerticalAlignment="Top" Width="102" TextWrapping="Wrap"/>
+        <TextBox IsReadOnly="True" BorderThickness="0" Name="lblConfirm" Text="" HorizontalAlignment="Left" Height="36" Margin="32,242,0,0" VerticalAlignment="Top" Width="102" TextWrapping="Wrap"/>
+        <TextBox Name="txtNewPassword" VerticalContentAlignment="Center" HorizontalAlignment="Left" Height="28" Margin="150,74,0,0" TextWrapping="Wrap" Text="New Password" VerticalAlignment="Top" Width="112"/>
+        <Label Content="Change password" HorizontalAlignment="Left" Height="28" Margin="150,41,0,0" VerticalAlignment="Top" Width="112"/>
+        <Button Name="btnChangePassword" Content="Update" HorizontalAlignment="Left" Height="35" Margin="150,116,0,0" VerticalAlignment="Top" Width="112" Click="btnChangePassword_Click"/>
 
-        <Grid Name="adminPanel" Visibility="Hidden">
+
+        <Grid Name="adminPanel" Visibility="Visible">
             <!--User creation-->
             <Label Content="Add user" HorizontalAlignment="Left" HorizontalContentAlignment="Center" Height="38" Margin="272,16,0,0" VerticalAlignment="Top" Width="108"  FontWeight="Bold" FontSize="16"/>
             <Label Content="Username:" HorizontalAlignment="Left" Height="25" Margin="272,41,0,0" VerticalAlignment="Top" Width="108" />
@@ -33,12 +37,17 @@
             <!--User Management-->
             <Label Content="Users" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Height="38" Margin="410,16,0,0" VerticalAlignment="Top" Width="180" FontWeight="Bold" FontSize="16"/>
             <ListBox Name="lsUserNames" BorderThickness="1" HorizontalAlignment="Left" Margin="410,54,0,47" Width="180" SelectionChanged="lsUserNames_SelectionChanged" />
-            <Grid Name="userPanel" Visibility="Hidden" Margin="595,10,0,0">
+            <Grid Name="userPanel" Visibility="Visible" Margin="595,10,0,0">
                 <Label Content="Username" HorizontalAlignment="Left" Height="24" Margin="23,5,0,0" VerticalAlignment="Top" Width="162"/>
                 <TextBox Name="txtDisplayUserName" HorizontalAlignment="Left" VerticalContentAlignment="Center" Height="33" Margin="23,29,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="162"/>
-                <CheckBox Name="ckbIsAdmin" Content="User is an admin" HorizontalAlignment="Left" Height="18" Margin="23,80,0,0" VerticalAlignment="Top" Width="162"/>
-                <Button Name="btnDeleteUser" Content="Delete User" Background="Red" Foreground="White"  HorizontalAlignment="Left" Height="30" Margin="23,340,0,0" VerticalAlignment="Top" Width="81" Click="btnDeleteUser_Click"/>
+                <CheckBox Name="ckbIsAdmin" Content="User is an admin" HorizontalAlignment="Left" Height="18" Margin="23,80,0,0" VerticalAlignment="Top" Width="112"/>
 
+                <Label Content="Password" HorizontalAlignment="Left" Height="30" Margin="24,94,0,0" VerticalAlignment="Top" Width="96"/>
+                <TextBox Name="txtPasswordEdit" Text="New password" HorizontalAlignment="Left" Height="24" Margin="24,124,0,0" VerticalAlignment="Top" Width="161"/>
+                <CheckBox Name="ckbChangePassword" Content="Change password" HorizontalAlignment="Left" Height="18" Margin="24,155,0,0" VerticalAlignment="Top" Width="120"/>
+
+                <Button Name="btnDeleteUser" Content="Delete User" Background="Red" Foreground="White"  HorizontalAlignment="Left" Height="30" Margin="23,340,0,0" VerticalAlignment="Top" Width="81" Click="btnDeleteUser_Click"/>
+                <Button Name="btnSaveData" Content="Save" VerticalContentAlignment="Top" HorizontalAlignment="Left" Height="18" Margin="160,155,0,0" VerticalAlignment="Top" Width="55" Click="btnSaveData_Click"/>
             </Grid>
 
         </Grid>
