--- a/SSAANIP/MainWindow.xaml
+++ b/SSAANIP/MainWindow.xaml
@@ -9,10 +9,6 @@
     <Grid Width="865" Height="414">
         <Button Content="Refresh data" HorizontalAlignment="Left" Height="27" VerticalAlignment="Top" Width="75" Click="btnUpdateDb_clicked"/>
 
-        <Button Content="Play selected album" Name="btnPlayAlbum" HorizontalAlignment="Left" Height="25" Margin="154,221,0,0" VerticalAlignment="Top" Width="125" Click="btnPlayAlbum_clicked" Visibility="Hidden"/>
-        <Button Content="Queue selected album" Name="btnQueueAlbum" HorizontalAlignment="Left" Height="25" Margin="154,251,0,0" VerticalAlignment="Top" Width="125" Click="btnQueueAlbum_Click" Visibility="Hidden"/>
-        <Button Content="Play selected song" Name="btnPlaySong" HorizontalAlignment="Left" Height="25" Margin="341,221,0,0" VerticalAlignment="Top" Width="124" Click="btnPlaySong_Click" Visibility="Hidden"/>
-        <Button Content="Queue selected song" Name="btnQueueSong" HorizontalAlignment="Left" Height="25" Margin="341,251,0,0" VerticalAlignment="Top" Width="124" Click="btnQueueSong_Click" Visibility="Hidden"/>
 
         <MediaElement Name="mediaElement" HorizontalAlignment="Left" Height="72" Margin="0,0,0,0" VerticalAlignment="Top" Width="0" MediaEnded="mediaElement_MediaEnded" UnloadedBehavior="Manual" LoadedBehavior="Manual"  />
 
@@ -23,9 +19,7 @@
         <Button Name="btnPlayPause" Margin="63,333,780,49" Background="GreenYellow" BorderBrush="Transparent" Content="⏵" Click="btnPlayPause_Click" />
         <Button Name="btnLoopToggle" Margin="821,333,22,49" Background="red" BorderBrush="Transparent" Content="🔁" Click="btnLoopToggle_Click" />
         <Button Name="btnShuffleToggle" Margin="794,333,49,49" Background="red" BorderBrush="Transparent" Content="🔀" Click="btnShuffleToggle_Click" />
-
         <Label Name="lblSongPlaying" Margin="173,323,174,58" Content=""/>
-
         <Slider Name="sdrVolume" HorizontalAlignment="Left" Height="21" Margin="0,361,0,0" VerticalAlignment="Top" Value="5" Width="168" ValueChanged="sdrVolume_ValueChanged"/>
         <Slider Name="sdrPosition" HorizontalAlignment="Left" Visibility="Visible" Height="24" TickFrequency="1" TickPlacement="None" IsSnapToTickEnabled="True" Margin="173,360,0,0" VerticalAlignment="Top" Width="603"  Maximum="100" ValueChanged="sdrPosition_ValueChanged"/>
         <Label x:Name="lblTime" Margin="696,321,89,63" Content=""/>
@@ -44,11 +38,10 @@
         </Button>
         <Button Name="btnQueueDelete" Content="🗑️" Visibility="Hidden" HorizontalAlignment="Left" Height="20" Margin="693,59,0,0" VerticalAlignment="Top" Width="20" Click="btnQueueDelete_Click" />
         <Button Name="btnPlaySongFromQueue" Content="⏵" Visibility="Hidden" HorizontalAlignment="Left" Height="20" Margin="693,105,0,0" VerticalAlignment="Top" Width="20" Click="btnPlaySongFromQueue_Click"/>
-
-
-
         <Button Name="btnUserManage" Content="Manage user" HorizontalAlignment="Left" Height="27" Margin="75,0,0,0" VerticalAlignment="Top" Width="82" Click="btnUserManage_Click"/>
         <Button Name="btnClearQueue" Content="Clear Queue" Visibility="Hidden" HorizontalAlignment="Left" Height="25" Margin="636,276,0,0" VerticalAlignment="Top" Width="75" Click="btnClearQueue_Click"/>
+
+        <!--Album view-->
         <Grid Name="grdAlbums" Visibility="Hidden" HorizontalAlignment="Left" Height="179" Margin="19,55,0,0" VerticalAlignment="Top" Width="527">
             <ListBox Name="lsArtist"  HorizontalAlignment="Left" Height="119" Margin="10,0,0,0" VerticalAlignment="Center" Width="125" SelectionChanged="lsArtist_SelectionChanged" ScrollViewer.VerticalScrollBarVisibility="Auto" UseLayoutRounding="True" />
             <ListBox Name="lsAlbums" HorizontalAlignment="Left" Height="119" Margin="158,0,0,0" VerticalAlignment="Center" Width="125" SelectionChanged="lsAlbums_SelectionChanged"/>
@@ -56,16 +49,30 @@
             <Label Content="Artists" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Height="25" Margin="10,5,0,0" VerticalAlignment="Top" Width="125"/>
             <Label Content="Albums" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Height="25" Margin="158,5,0,0" VerticalAlignment="Top" Width="125"/>
             <Label Content="Songs" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Height="25" Margin="297,5,0,0" VerticalAlignment="Top" Width="230"/>
+            <Button Content="Play selected album" Name="btnPlayAlbum" HorizontalAlignment="Left" Height="25" Margin="154,221,0,0" VerticalAlignment="Top" Width="125" Click="btnPlayAlbum_clicked" Visibility="Hidden"/>
+            <Button Content="Queue selected album" Name="btnQueueAlbum" HorizontalAlignment="Left" Height="25" Margin="154,251,0,0" VerticalAlignment="Top" Width="125" Click="btnQueueAlbum_Click" Visibility="Hidden"/>
+            <Button Content="Play selected song" Name="btnPlaySong" HorizontalAlignment="Left" Height="25" Margin="341,221,0,0" VerticalAlignment="Top" Width="124" Click="btnPlaySong_Click" Visibility="Hidden"/>
+            <Button Content="Queue selected song" Name="btnQueueSong" HorizontalAlignment="Left" Height="25" Margin="341,251,0,0" VerticalAlignment="Top" Width="124" Click="btnQueueSong_Click" Visibility="Hidden"/>
         </Grid>
         <Button Name="btnPlaylistsToggle" Content="Show playlists" HorizontalAlignment="Left" Height="27" Margin="157,0,0,0" VerticalAlignment="Top" Width="90" Click="btnPlaylistsToggle_Click"/>
-        <Grid Name="grdPlaylists" HorizontalAlignment="Left" Height="296" Margin="0,27,0,0" VerticalAlignment="Top" Width="674">
-            <Label Content="Playlists" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Height="31" Margin="22,10,0,0" VerticalAlignment="Top" Width="115"/>
-            <ListBox Name="lsPlaylists" HorizontalAlignment="Left" Height="141" Margin="22,41,0,0" VerticalAlignment="Top" Width="115" />
+
+        <!--Playlist View-->
+        <Grid Name="grdPlaylists" Visibility="Visible" HorizontalAlignment="Left" Height="296" Margin="0,27,0,0" VerticalAlignment="Top" Width="674">
+            <Label Content="Playlists" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Height="27" Margin="29,34,0,0" VerticalAlignment="Top" Width="125"/>
+            <ListBox Name="lsPlaylists" Height="119" Margin="29,58,520,0" VerticalAlignment="Top" Width="125" SelectionChanged="lsPlaylists_SelectionChanged" />
+            <Label Content="Songs" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Height="27" Margin="178,34,0,0" VerticalAlignment="Top" Width="199"/>
+            <ListBox Name="lsPlaylistsSongs" HorizontalAlignment="Left" Height="119" Margin="177,58,0,0" VerticalAlignment="Top" Width="200" />
+            <Button Name="btnNewPlaylist" Content="New Playlist" HorizontalAlignment="Left" Height="21" Margin="404,10,0,0" VerticalAlignment="Top" Width="76" Click="btnNewPlaylist_Click"/>
+            <Grid Name="grdPlaylistCreation" HorizontalAlignment="Left" Height="244" Margin="404,42,0,0" VerticalAlignment="Top" Width="270">
+                <Label Content="Name" HorizontalAlignment="Left" Height="24" Margin="10,1,0,0" VerticalAlignment="Top" Width="72"/>
+                <TextBox Name="txtPlaylistName" HorizontalAlignment="Left" Height="24" Margin="87,1,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="173"/>
+                <CheckBox Name="ckbIsPublic" Content="Public" HorizontalAlignment="Left" Height="18" Margin="10,80,0,0" VerticalAlignment="Top" Width="59"/>
+                <Label Content="Description" HorizontalAlignment="Left" Height="27" Margin="10,30,0,0" VerticalAlignment="Top" Width="72"/>
+                <TextBox Name="txtPlaylistDescription" HorizontalAlignment="Left" Height="45" Margin="87,30,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="173"/>
+                <Button Name="btnSavePlaylist" Content="Save" HorizontalAlignment="Left" Height="27" Margin="188,207,0,0" VerticalAlignment="Top" Width="61" Click="btnSavePlaylist_Click"/>
+            </Grid>
 
 
         </Grid>
-
-
-
     </Grid>
 </Page>
